tests/failing/2-generic_lambda_exec_mismatch/main.rgo
str: @str
int: @int

foo: <T>(x:T, y:T, ok:()){
    ok
}
done: (){
    @exit(0)
}
main: () {
    foo(1, "bad", done)
}
